feat(folia): add Folia backend, thread context and completion service